--- a/Mission_to_Mars/Mission_to_Mars.ipynb
+++ b/Mission_to_Mars/Mission_to_Mars.ipynb
@@ -4090,7 +4090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -4114,8 +4114,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
+       "      <th>Category</th>\n",
+       "      <th>Values</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -4169,7 +4169,7 @@
        "</div>"
       ],
       "text/plain": [
-       "                      0                              1\n",
+       "               Category                         Values\n",
        "0  Equatorial Diameter:                       6,792 km\n",
        "1       Polar Diameter:                       6,752 km\n",
        "2                 Mass:  6.39 × 10^23 kg (0.11 Earths)\n",
@@ -4181,14 +4181,204 @@
        "8          Recorded By:           Egyptian astronomers"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "facts_df = table[0]\n",
+    "facts_df.columns = [\"Category\", \"Values\"]\n",
     "facts_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<table border=\"1\" class=\"dataframe\">\n",
+      "  <thead>\n",
+      "    <tr style=\"text-align: right;\">\n",
+      "      <th></th>\n",
+      "      <th>Category</th>\n",
+      "      <th>Values</th>\n",
+      "    </tr>\n",
+      "  </thead>\n",
+      "  <tbody>\n",
+      "    <tr>\n",
+      "      <th>0</th>\n",
+      "      <td>Equatorial Diameter:</td>\n",
+      "      <td>6,792 km</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <th>1</th>\n",
+      "      <td>Polar Diameter:</td>\n",
+      "      <td>6,752 km</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <th>2</th>\n",
+      "      <td>Mass:</td>\n",
+      "      <td>6.39 × 10^23 kg (0.11 Earths)</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <th>3</th>\n",
+      "      <td>Moons:</td>\n",
+      "      <td>2 (Phobos &amp; Deimos)</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <th>4</th>\n",
+      "      <td>Orbit Distance:</td>\n",
+      "      <td>227,943,824 km (1.38 AU)</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <th>5</th>\n",
+      "      <td>Orbit Period:</td>\n",
+      "      <td>687 days (1.9 years)</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <th>6</th>\n",
+      "      <td>Surface Temperature:</td>\n",
+      "      <td>-87 to -5 °C</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <th>7</th>\n",
+      "      <td>First Record:</td>\n",
+      "      <td>2nd millennium BC</td>\n",
+      "    </tr>\n",
+      "    <tr>\n",
+      "      <th>8</th>\n",
+      "      <td>Recorded By:</td>\n",
+      "      <td>Egyptian astronomers</td>\n",
+      "    </tr>\n",
+      "  </tbody>\n",
+      "</table>\n"
+     ]
+    }
+   ],
+   "source": [
+    "mars_html = facts_df.to_html()\n",
+    "print(mars_html)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hemisphere_url = 'https://astrogeology.usgs.gov/search/results?q=hemisphere+enhanced&k1=target&v1=Mars'\n",
+    "base_url = 'https://astrogeology.usgs.gov'\n",
+    "browser.visit(hemisphere_url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hemi_html = browser.html\n",
+    "hemisoup = bs(hemi_html, 'html.parser')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "item = hemisoup.find_all('div', class_='item')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['https://astrogeology.usgs.gov/search/map/Mars/Viking/cerberus_enhanced', 'https://astrogeology.usgs.gov/search/map/Mars/Viking/schiaparelli_enhanced', 'https://astrogeology.usgs.gov/search/map/Mars/Viking/syrtis_major_enhanced', 'https://astrogeology.usgs.gov/search/map/Mars/Viking/valles_marineris_enhanced']\n",
+      "['Cerberus Hemisphere Enhanced', 'Schiaparelli Hemisphere Enhanced', 'Syrtis Major Hemisphere Enhanced', 'Valles Marineris Hemisphere Enhanced']\n"
+     ]
+    }
+   ],
+   "source": [
+    "title = []\n",
+    "url = []\n",
+    "for i in item:\n",
+    "    title.append(i.find('h3').text.strip())\n",
+    "    url.append(base_url + i.find('a')['href'])  \n",
+    "print(title)    \n",
+    "print(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['https://astrogeology.usgs.gov/cache/images/f5e372a36edfa389625da6d0cc25d905_cerberus_enhanced.tif_full.jpg',\n",
+       " 'https://astrogeology.usgs.gov/cache/images/3778f7b43bbbc89d6e3cfabb3613ba93_schiaparelli_enhanced.tif_full.jpg',\n",
+       " 'https://astrogeology.usgs.gov/cache/images/555e6403a6ddd7ba16ddb0e471cadcf7_syrtis_major_enhanced.tif_full.jpg',\n",
+       " 'https://astrogeology.usgs.gov/cache/images/b3c7c6c9138f57b4756be9b9c43e3a48_valles_marineris_enhanced.tif_full.jpg']"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "img_url = []\n",
+    "for i in url:\n",
+    "    browser.visit(i)\n",
+    "    html = browser.html\n",
+    "    soup = bs(html, 'html.parser')\n",
+    "    img = base_url + soup.find('img',class_='wide-image')['src']\n",
+    "    img_url.append(img)\n",
+    "img_url"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'title': 'Cerberus Hemisphere Enhanced',\n",
+       "  'img_url': 'https://astrogeology.usgs.gov/cache/images/f5e372a36edfa389625da6d0cc25d905_cerberus_enhanced.tif_full.jpg'},\n",
+       " {'title': 'Schiaparelli Hemisphere Enhanced',\n",
+       "  'img_url': 'https://astrogeology.usgs.gov/cache/images/3778f7b43bbbc89d6e3cfabb3613ba93_schiaparelli_enhanced.tif_full.jpg'},\n",
+       " {'title': 'Syrtis Major Hemisphere Enhanced',\n",
+       "  'img_url': 'https://astrogeology.usgs.gov/cache/images/555e6403a6ddd7ba16ddb0e471cadcf7_syrtis_major_enhanced.tif_full.jpg'},\n",
+       " {'title': 'Valles Marineris Hemisphere Enhanced',\n",
+       "  'img_url': 'https://astrogeology.usgs.gov/cache/images/b3c7c6c9138f57b4756be9b9c43e3a48_valles_marineris_enhanced.tif_full.jpg'}]"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "hemisphere_image_urls = []\n",
+    "\n",
+    "for i in range(len(title)):\n",
+    "    hemisphere_image_urls.append({'title':title[i],'img_url':img_url[i]})\n",
+    "\n",
+    "hemisphere_image_urls"
    ]
   },
   {
